--- a/src/components/Goat/Goat.scss
+++ b/src/components/Goat/Goat.scss
@@ -1,6 +1,9 @@
 .card {
-  width: 18rem;
+  width: 18rem !important;
   margin: 10px;
+  img{
+    max-width: 18rem;
+  }
 }
 .card-container {
   display: flex;
