create a function where it creates and takes a goat

--- a/src/components/Goat/Goat.scss
+++ b/src/components/Goat/Goat.scss
@@ -2,8 +2,9 @@
   width: 18rem !important;
   margin: 10px;
   img{
-    max-width: 18rem;
+    width: 18rem;
   }
+  
 }
 .card-container {
   display: flex;
